# xmlhub-indexer

./: .gitignore  .rustsec-ignore.txt  Cargo.toml  Changelog.md  README.md  TODO.md  build.rs  resources
docs/: about.md  beast1blinder.py  beast2blinder.py  blinder-scripts.md  contribute.md  daemon.md  macos.md  signatures.md  start.md  todo.md  tool.md
examples/: README.md  start-xmlhub-via-crontab  xmlhub-build-index-daemon  xmlhub-daemon
include/: git_describe_arguments.rs
libs/chj-unix-util/: Cargo.toml
libs/chj-unix-util/docs/: daemon.md
libs/chj-unix-util/src/: backoff.rs  daemon.rs  eval_with_default.rs  file_lock.rs  file_util.rs  forking_loop.rs  lib.rs  logging.rs  polling_signals.rs  processes.rs  re_exec.rs  retry.rs  signal.rs  timestamp_formatter.rs  unix.rs  util.rs  xorshift.rs
libs/chj-unix-util/src/daemon/: warrants_restart.rs
libs/pluraless/: Cargo.toml
libs/pluraless-impl/: Cargo.toml
libs/pluraless-impl/src/: lib.rs
libs/pluraless-macro/: Cargo.toml
libs/pluraless-macro/src/: lib.rs
libs/pluraless/src/: lib.rs
libs/pluraless/tests/: pluralized.rs
libs/run-git/: Cargo.toml  README.md
libs/run-git/src/: base_and_rel_path.rs  command.rs  git.rs  lib.rs  path_util.rs  util.rs
src/: backoff.rs  beast_version.rs  browser.rs  cargo.rs  changelog.rs  checkout_context.rs  clap_styles.rs  command.rs  const_util.rs  daemon.rs  doi.rs  dry_run.rs  effect.rs  file_lock.rs  file_util.rs  fixup_path.rs  flattened.rs  folder.rs  forking_loop.rs  get_terminal_width.rs  git.rs  git_check_version.rs  git_version.rs  hack09.rs  hints.rs  html_util.rs  lib.rs  modified_document.rs  modified_xml_document.rs  parse_xml.rs  path_util.rs  rayon_util.rs  read_xml.rs  ref_or_owned.rs  section.rs  sha256.rs  string_tree.rs  tuple_transpose.rs  unix.rs  unix_passwd.rs  (+17 more)
src/installation/: app_info.rs  app_signature.rs  binaries_repo.rs  copy_file.rs  defaults.rs  done.rs  git_based_upgrade.rs  install.rs  json_file.rs  mod.rs  private_file.rs  serde_json_util.rs  shell.rs  trusted_keys.rs  util.rs
src/utillib/: file_util_with_trash.rs  hex.rs  home.rs  mod.rs  setpriority.rs
