[package]
name = "xmlhub-indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
ahtml = { version = "0.7.0" }
auri = { version = "0.1.1" }
chj-util = { version = "0.2.1" }

#xmlparser = "0.13.6"
# ^ OH careful, recent owner change, was abandoned and merged into
#   roxmltree but not publicly accessible!
roxmltree = "0.20.0"
ouroboros = "0.18.5"

anyhow = "1.0.65"
clap = { version = "3", features = ["derive"] }
chrono = "0.4"
lazy_static = "1.4"
itertools = "0.11.0"
thiserror = "1.0.37"
# use older version to avoid additional, unknown, dependencies
# (separate newer versions of the windows dependencies)
os_info = "=3.7"
rayon = "=1.5.3"
# use old version since it's known, and doesn't have additional
# dependencies
toml = "0.5"
mimalloc = "=0.1.29"
