[package]
name = "xmlhub-indexer"
version = "0.1.0"
edition = "2021"
authors = ["Christian Jaeger <ch@christianjaeger.ch>"]
license = "MIT OR Apache-2.0"

[lints.clippy]
collapsible_else_if = "allow"
collapsible_if = "allow"

[profile.dev.package."*"]
opt-level = "s"

[profile.release.package."*"]
opt-level = "s"

[profile.release]
opt-level = "s"
overflow-checks = true

[dependencies]
ahtml = { version = "0.7.0" }
auri = { version = "0.1.1" }
chj-util = { version = "0.2.1" }

pluraless = { path = "libs/pluraless" }

# Note: generally using older version since I know/verified those and
# they are (maybe not all any more) compatible with rustc from Debian stable.

#xmlparser = "0.13.6"
# ^ OH careful, recent owner change, was abandoned and merged into
#   roxmltree but not publicly accessible!
roxmltree = "0.20.0"
ouroboros = "0.18.5"

anyhow = "1.0.65"
clap = { version = "3", features = ["derive"] }
terminal_size = "0.2"
chrono = "0.4"
lazy_static = "1.4"
itertools = "0.11.0"
thiserror = "1.0.37"
walkdir = "2"
os_info = "=3.7"
rayon = "=1.5.3"
toml = "0.5"
nix = "0.24.3"
num_threads  = "=0.1.6"
trash = "2.1.5"
fips205 = "0.4.1"
serde = "1.0.154"
serde_json = "1.0.96"
