[package]
name = "chj-unix-util"
version = "0.1.0"
edition = "2021"
authors = ["Christian Jaeger <ch@christianjaeger.ch>"]
license = "MIT OR Apache-2.0"

[lints.clippy]
collapsible_else_if = "allow"
collapsible_if = "allow"

[profile.dev.package."*"]
opt-level = "s"

[profile.release.package."*"]
opt-level = "s"

[profile.release]
opt-level = "s"
overflow-checks = true


[dependencies]
anyhow = "1.0.65"
chrono = "0.4"
cj-path-util = { version = "0.1.0", features = [ "unix" ] }
nix = "0.24.3"
num_threads  = "=0.1.6"
ouroboros = "0.18.5"
thiserror = "1.0.37"
