[package]
name = "pluraless-macro"
version = "0.1.0"
edition = "2021"
authors = ["Christian Jaeger <ch@christianjaeger.ch>"]
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
pluraless-impl = { path = "../pluraless-impl" }
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
